force-app/main/default/objects/Contact/fields/Lead_Source_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Most_Recent__c</fullName>
    <label>Lead Source Most Recent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web - Whitepaper</fullName>
            </value>
            <value>
                <fullName>Contact Us</fullName>
            </value>
            <value>
                <fullName>Content Download</fullName>
            </value>
            <value>
                <fullName>Demo Request</fullName>
            </value>
            <value>
                <fullName>Freemium</fullName>
            </value>
            <value>
                <fullName>Lead Gen - BDR</fullName>
            </value>
            <value>
                <fullName>Lead Gen - Buyer Insights</fullName>
            </value>
            <value>
                <fullName>Lead Gen - Content Syndication</fullName>
            </value>
            <value>
                <fullName>Lead Gen - Events</fullName>
            </value>
            <value>
                <fullName>Lead Gen - HQL</fullName>
            </value>
            <value>
                <fullName>Lead Gen - Other</fullName>
            </value>
            <value>
                <fullName>Lead Gen - Referral</fullName>
            </value>
            <value>
                <fullName>Lead Gen - Webinar</fullName>
            </value>
            <value>
                <fullName>Web Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>