force-app/main/default/objects/Contact/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <description>Lead Status of contact - default is Active</description>
    <inlineHelpText>Prospect – Email monthly from ReadyTalk
Nurture – Email monthly from sales rep
Active – Sales rep is actively pursuing deal - no marketing emails
Dead – No potential opportunity
Hold - Not dead and no marketing emails</inlineHelpText>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>SAL (Sales Accepted Lead)</fullName>
                <default>true</default>
                <label>SAL (Sales Accepted Lead)</label>
            </value>
            <value>
                <fullName>Recycle</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>