force-app/main/default/objects/Contact/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Level in organization</description>
    <label>Job Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Individual Contributor</fullName>
                <default>true</default>
                <label>Individual Contributor</label>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>