force-app/main/default/objects/Contact/fields/License_Profile__c.field-meta.xml
<CustomField>
    <fullName>License_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Profile</label>
    <type>Checkbox</type>
</CustomField>