force-app/main/default/objects/Contact/fields/Marketing_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Opt-In</label>
    <type>Checkbox</type>
</CustomField>