force-app/main/default/objects/Contact/fields/Marketing_Opt_In_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Opt_In_Timestamp__c</fullName>
    <label>Marketing Opt-In Timestamp</label>
    <type>DateTime</type>
</CustomField>