force-app/main/default/objects/Contact/fields/Most_Recent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Campaign__c</fullName>
    <description>Most recent campaign that the contact was associated to.</description>
    <label>Most Recent Campaign</label>
    <length>99</length>
    <type>Text</type>
</CustomField>