force-app/main/default/objects/Contact/fields/NetSuite_Locked__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NetSuite Locked</label>
    <type>Checkbox</type>
</CustomField>