force-app/main/default/objects/Contact/fields/NetSuite_Mapping__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Mapping__c</fullName>
    <label>NetSuite Mapping</label>
    <length>10</length>
    <type>Text</type>
</CustomField>