force-app/main/default/objects/Contact/fields/NetSuite_Push__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Push__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NetSuite Push</label>
    <type>Checkbox</type>
</CustomField>