force-app/main/default/objects/Contact/fields/Next_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Survey_Date__c</fullName>
    <label>Next Survey Date</label>
    <type>Date</type>
</CustomField>