force-app/main/default/objects/Contact/fields/NS_Sync__c.field-meta.xml
<CustomField>
    <fullName>NS_Sync__c</fullName>
    <label>NetSuite Sync</label>
    <length>255</length>
    <type>Text</type>
</CustomField>