force-app/main/default/objects/Contact/fields/Number_of_Surveys_Sent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Surveys_Sent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used to calculate the number of times the &quot;Survey Sent&quot; box as checked. We can then use this to calculate response rates across customers using this and the roll-up field titled &quot;Surveys Completed&quot;</description>
    <label>Number of Surveys Sent</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>