force-app/main/default/objects/Contact/fields/Nurture_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Campaigns__c</fullName>
    <label>Nurture Campaigns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eloqua</fullName>
            </value>
            <value>
                <fullName>Free Trial</fullName>
            </value>
            <value>
                <fullName>General - All Use Cases</fullName>
            </value>
            <value>
                <fullName>IT Buyer</fullName>
            </value>
            <value>
                <fullName>Marketing User - Webinar</fullName>
            </value>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Salesforce.com</fullName>
            </value>
            <value>
                <fullName>Sales User - Collaboration</fullName>
            </value>
            <value>
                <fullName>-Please Select-</fullName>
                <default>true</default>
                <label>-Please Select-</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>