force-app/main/default/objects/Contact/fields/Owner_Company_Match__c.field-meta.xml
<CustomField>
    <fullName>Owner_Company_Match__c</fullName>
    <formula>IF(
TEXT(Owner.Company__c) = TEXT(Account.Owner.Company__c), True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Company Match</label>
    <type>Checkbox</type>
</CustomField>