force-app/main/default/objects/Contact/fields/Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_First_Name__c</fullName>
    <formula>IF(OR(Owner.Alias = &#39;Mark&#39;,Owner.Alias = &#39;acco&#39;,Owner.Alias = &#39;sfadmin&#39;,Owner.Alias = &#39;lbypa&#39;,Owner.Alias = &#39;datanyze&#39;,Owner.Alias = &#39;sfdev&#39; ,Owner.Alias = &#39;leven&#39;,Owner.Alias = &#39;webform&#39;,Owner.Alias = &#39;lgene&#39;,Owner.Alias = &#39;cmark&#39;,Owner.Alias = &#39;celi&#39;,Owner.Alias = &#39;isale&#39;,Owner.Alias = &#39;sfsherpa&#39;,Owner.Alias = &#39;kwach&#39; ,Owner.Alias = &#39;integrat&#39;,Owner.Alias = &#39;Marketo&#39;,Owner.Alias = &#39;intweb&#39;,CONTAINS( Owner.FirstName,&#39;Inactive&#39;)),&#39;&#39;,IF(Owner.Alias = &#39;amana&#39;,&#39;Chelsea &amp;&#39;,IF(Owner.Alias = &#39;aspec&#39;,&#39;Kerry &amp;&#39;, Owner.FirstName)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner First Name</label>
    <type>Text</type>
</CustomField>