force-app/main/default/objects/Contact/fields/OwnersFullName__c.field-meta.xml
<CustomField>
    <fullName>OwnersFullName__c</fullName>
    <formula>Owner_First_Name__c + &quot; &quot; +  Owner_Last_Name__c</formula>
    <label>Owner&apos;s Full Name</label>
    <type>Text</type>
</CustomField>