force-app/main/default/objects/Contact/fields/OwnersTitle__c.field-meta.xml
<CustomField>
    <fullName>OwnersTitle__c</fullName>
    <formula>Owner.Title</formula>
    <label>Owner&#39;s Title</label>
    <type>Text</type>
</CustomField>