force-app/main/default/objects/Contact/fields/Parent_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Org_ID__c</fullName>
    <description>Organization ID of the account or department that is directly related to this contact.</description>
    <label>Parent Org ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>