force-app/main/default/objects/Contact/fields/Permanent_Events_Notes_2_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Events_Notes_2_Level_3__c</fullName>
    <inlineHelpText>Used only for Level 3 Customers.</inlineHelpText>
    <label>Permanent Events Notes 2 (Level 3)</label>
    <type>TextArea</type>
</CustomField>