force-app/main/default/objects/Contact/fields/PGi_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>PGi_Company_ID__c</fullName>
    <formula>Account.PGi_Company_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PGi Company ID</label>
    <type>Text</type>
</CustomField>