force-app/main/default/objects/Contact/fields/Preferred_Call_Back_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Call_Back_Date__c</fullName>
    <label>Preferred Call Back Date</label>
    <type>Date</type>
</CustomField>