force-app/main/default/objects/Contact/fields/Primary_Contact_on_Opp__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_on_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when it is a primary contact on the opportunity</description>
    <label>Primary Contact on Opp</label>
    <type>Checkbox</type>
</CustomField>