force-app/main/default/objects/Contact/fields/Prospect_Status__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Status__c</fullName>
    <label>Prospect Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Qualified Lead (MQL)</fullName>
            </value>
            <value>
                <fullName>Passive MQL</fullName>
            </value>
            <value>
                <fullName>Sales Sourced</fullName>
            </value>
            <value>
                <fullName>Event Sourced</fullName>
            </value>
            <value>
                <fullName>AM Sourced</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>ToFu</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Marketing Qualified</fullName>
            </value>
            <value>
                <fullName>Sales Accepted</fullName>
            </value>
            <value>
                <fullName>Sales Qualified</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
            </value>
            <value>
                <fullName>Customer Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>