force-app/main/default/objects/Contact/fields/Provisioned__c.field-meta.xml
<CustomField>
    <fullName>Provisioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provision</label>
    <type>Checkbox</type>
</CustomField>