force-app/main/default/objects/Contact/fields/Purchasing_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Timeline__c</fullName>
    <description>This was &apos;[Custom Field: Buying Mode] cd_buying_mode_c&apos; in Pardot=SugarCRM</description>
    <label>Purchasing Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>Within 3 months</fullName>
            </value>
            <value>
                <fullName>3-6 months</fullName>
            </value>
            <value>
                <fullName>Longer than 6 months</fullName>
            </value>
            <value>
                <fullName>No timeframe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>