force-app/main/default/objects/Contact/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The person to contact for a company reference</inlineHelpText>
    <label>Reference</label>
    <type>Checkbox</type>
</CustomField>