force-app/main/default/objects/Contact/fields/Remove_From_Free_Trial_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Remove_From_Free_Trial_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remove contact from the Marketo Free Trial Nurture Campaign</description>
    <inlineHelpText>Remove contact from the Marketo Free Trial Nurture Campaign</inlineHelpText>
    <label>Remove From Free Trial Campaign</label>
    <type>Checkbox</type>
</CustomField>