force-app/main/default/objects/Contact/fields/RT_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_Contact_Id__c</fullName>
    <externalId>true</externalId>
    <label>RT Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>