force-app/main/default/objects/Contact/fields/RT_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>RT_Contact_Type__c</fullName>
    <label>RT Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Error - Phone</fullName>
            </value>
            <value>
                <fullName>Not Provisioned</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>