force-app/main/default/objects/Contact/fields/RT_Inactive_Owner__c.field-meta.xml
<CustomField>
    <fullName>RT_Inactive_Owner__c</fullName>
    <label>RT Inactive Owner</label>
    <length>99</length>
    <type>Text</type>
</CustomField>