force-app/main/default/objects/Contact/fields/Salesforce_Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Org_Type__c</fullName>
    <description>Salesforce Edition; UE, EE, PE, TE, Free</description>
    <inlineHelpText>If contact is a SF user, please indicate SF edition: UE, EE, PE, TE, Free</inlineHelpText>
    <label>Salesforce Org Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>