force-app/main/default/objects/Contact/fields/saleswings__Cookie__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Cookie__c</fullName>
    <label>SW Cookie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>