force-app/main/default/objects/Contact/fields/saleswings__Favorite_Icon__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Favorite_Icon__c</fullName>
    <formula>IF(saleswings__Favorite__c,IMAGE($Setup.saleswings__SalesWings_Internal__c.saleswings__Image_Base_URL__c &amp; &quot;FavoriteYes.PNG&quot;,&quot;Favorite&quot;,20,20),IMAGE($Setup.saleswings__SalesWings_Internal__c.saleswings__Image_Base_URL__c &amp; &quot;FavoriteNo.PNG&quot;,&quot;Not Favorite&quot;,20,20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SW Favorite</label>
    <type>Text</type>
</CustomField>