force-app/main/default/objects/Contact/fields/saleswings__SW_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>saleswings__SW_Lead_Score__c</fullName>
    <label>SW Total Point Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>