force-app/main/default/objects/Contact/fields/SF_Department_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Department_ID__c</fullName>
    <label>SF_Department_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>