force-app/main/default/objects/Contact/fields/Status_Active_or_Not_Provisioned__c.field-meta.xml
<CustomField>
    <fullName>Status_Active_or_Not_Provisioned__c</fullName>
    <description>**DO NOT DELETE - USED IN WFR AND FLOW** 
When the status of a contact is equal to Active or Not Provisioned, the box is checked. This is then used as filter criteria on the Contact Opt In Flow.</description>
    <formula>OR(
   TEXT( Status__c ) = &apos;Active&apos;,
   TEXT( Status__c ) = &apos;Not Provisioned&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Active or Not Provisioned</label>
    <type>Checkbox</type>
</CustomField>