force-app/main/default/objects/Contact/fields/Sugar_ID__c.field-meta.xml
<CustomField>
    <fullName>Sugar_ID__c</fullName>
    <description>ID from Sugar</description>
    <externalId>true</externalId>
    <label>Sugar ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>