force-app/main/default/objects/Contact/fields/Survey_Follow_Up_2__c.field-meta.xml
<CustomField>
    <fullName>Survey_Follow_Up_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Follow Up 2</label>
    <type>Checkbox</type>
</CustomField>