force-app/main/default/objects/Contact/fields/SY__c.field-meta.xml
<CustomField>
    <fullName>SY__c</fullName>
    <description>This is from the referrer SR in SugarCRM</description>
    <label>SY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>