force-app/main/default/objects/Contact/fields/TalkPoint_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>TalkPoint_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <label>TalkPoint Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>