force-app/main/default/objects/Contact/fields/Terms_Consent__c.field-meta.xml
<CustomField>
    <fullName>Terms_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>COD-1435, Case #872647:  GDPR field with data obtained in Eloqua and passed to Salesforce. Field Mapped from Lead object.</description>
    <label>Terms Consent</label>
    <type>Checkbox</type>
</CustomField>