force-app/main/default/objects/Contact/fields/totango__Totango_Insights__c.field-meta.xml
<CustomField>
    <fullName>totango__Totango_Insights__c</fullName>
    <label>Totango Insights</label>
    <length>255</length>
    <type>Text</type>
</CustomField>