force-app/main/default/objects/Contact/fields/totango__Totango_isOnline__c.field-meta.xml
<CustomField>
    <fullName>totango__Totango_isOnline__c</fullName>
    <label>Totango Online Status</label>
    <type>Url</type>
</CustomField>