force-app/main/default/objects/Contact/fields/totango__Totango_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>totango__Totango_Last_Update__c</fullName>
    <description>Last update timestamp of totango api</description>
    <label>Totango Last Update</label>
    <type>DateTime</type>
</CustomField>