force-app/main/default/objects/Contact/fields/totango__TotangoFirstActivity__c.field-meta.xml
<CustomField>
    <fullName>totango__TotangoFirstActivity__c</fullName>
    <label>TotangoFirstActivity</label>
    <type>DateTime</type>
</CustomField>