force-app/main/default/objects/Contact/fields/totango__TotangoLastActivity__c.field-meta.xml
<CustomField>
    <fullName>totango__TotangoLastActivity__c</fullName>
    <label>TotangoLastActivity</label>
    <type>DateTime</type>
</CustomField>