force-app/main/default/objects/Contact/fields/Type_of_Webcast_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Webcast_Interested_In__c</fullName>
    <label>Type of Webcast Interested In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>