force-app/main/default/objects/Contact/fields/Webcast_Webinar_Acct_Intent_Score__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Webinar_Acct_Intent_Score__c</fullName>
    <label>Webcast/Webinar Acct Intent Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>