force-app/main/default/objects/Contact/fields/Webcast_Webinar_Acct_Profile_Fit__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Webinar_Acct_Profile_Fit__c</fullName>
    <label>Webcast/Webinar Acct Profile Fit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>