force-app/main/default/objects/Contact/recordTypes/iMC_Contact.recordType-meta.xml
<RecordType>
    <fullName>iMC_Contact</fullName>
    <active>true</active>
    <description>iMeet Central Contact Records Only</description>
    <label>iMC Contact</label>
</RecordType>