force-app/main/default/objects/Contact/recordTypes/PGi_Contact.recordType-meta.xml
<RecordType>
    <fullName>PGi_Contact</fullName>
    <active>true</active>
    <label>PGi Contact</label>
</RecordType>