force-app/main/default/objects/Contact/recordTypes/ReadyTalk_Contact.recordType-meta.xml
<RecordType>
    <fullName>ReadyTalk_Contact</fullName>
    <active>true</active>
    <label>ReadyTalk Contact</label>
</RecordType>