force-app/main/default/objects/Contact/recordTypes/TalkPoint_Contact.recordType-meta.xml
<RecordType>
    <fullName>TalkPoint_Contact</fullName>
    <active>true</active>
    <label>TalkPoint Contact</label>
</RecordType>