force-app/main/default/objects/Contact/validationRules/ALL_Special_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>ALL_Special_Characters</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
$User.Alias &lt;&gt; &quot;autocln&quot;, 
$User.ProfileId &lt;&gt; &quot;00e30000001kms9&quot;, 
$User.Override_Validation_Rules__c = False, 
OR( 
CONTAINS( FirstName , &#39;/&#39;), 
CONTAINS(FirstName , &#39;\\&#39;), 
CONTAINS(FirstName , &#39;;&#39;), 
CONTAINS(FirstName , &#39;|&#39;), 
CONTAINS(FirstName , &#39;:&#39;), 
CONTAINS(LastName, &#39;/&#39;), 
CONTAINS(LastName, &#39;\\&#39;), 
CONTAINS(LastName, &#39;;&#39;), 
CONTAINS(LastName, &#39;|&#39;), 
CONTAINS(LastName, &#39;:&#39;), 
CONTAINS(Phone, &#39;/&#39;), 
CONTAINS(Phone, &#39;\\&#39;), 
CONTAINS(Phone, &#39;;&#39;), 
CONTAINS(Phone, &#39;|&#39;), 
CONTAINS(Phone, &#39;:&#39;), 
CONTAINS(MailingCity, &#39;/&#39;), 
CONTAINS(MailingCity, &#39;\\&#39;), 
CONTAINS(MailingCity, &#39;;&#39;), 
CONTAINS(MailingCity, &#39;|&#39;), 
CONTAINS(MailingCity, &#39;:&#39;), 
CONTAINS(MailingStreet, &#39;\\&#39;), 
CONTAINS(MailingStreet, &#39;;&#39;), 
CONTAINS(MailingStreet, &#39;|&#39;),  
CONTAINS(Email, &#39;/&#39;), 
CONTAINS(Email, &#39;\\&#39;), 
CONTAINS(Email, &#39;;&#39;), 
CONTAINS(Email, &#39;|&#39;), 
CONTAINS(Email, &#39;:&#39;) 
))</errorConditionFormula>
    <errorMessage>Contact Name, Phone, Email, Street Address, and City cannot contain the following special characters: / | \ ; :</errorMessage>
</ValidationRule>