force-app/main/default/objects/Contact/validationRules/Contact_requires_an_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_requires_an_Account</fullName>
    <active>true</active>
    <description>All Contacts must be associated to an Account</description>
    <errorConditionFormula>AND(
ISNULL(AccountId)
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>All Contacts are required to be associated with an Account.</errorMessage>
</ValidationRule>