force-app/main/default/objects/Contact/validationRules/PGi_First_Name_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>PGi_First_Name_Mandatory</fullName>
    <active>true</active>
    <description>First Name made mandatory when a user tries to save a contact record</description>
    <errorConditionFormula>AND(
CONTAINS(RecordType.Name, &quot;PGi&quot;), 
$User.ProfileId &lt;&gt; &quot;00e30000001kms9&quot;, 
ISBLANK( FirstName ),
$User.Override_Validation_Rules__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name is required when creating a Contact</errorMessage>
</ValidationRule>