force-app/main/default/objects/Contact/validationRules/ReadyTalk_Contact_assoc_w_Acct.validationRule-meta.xml
<ValidationRule>
    <fullName>ReadyTalk_Contact_assoc_w_Acct</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &quot;ReadyTalk Contact&quot;,
LEN(Account.Name) &lt;1)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>An account must be associated with this contact.</errorMessage>
</ValidationRule>