force-app/main/default/objects/Contact/validationRules/ReadyTalk_Contact_Nochange_Acct.validationRule-meta.xml
<ValidationRule>
    <fullName>ReadyTalk_Contact_Nochange_Acct</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;ReadyTalk Contact&quot;,
       ISCHANGED(AccountId),  
        NOT(ISPICKVAL( Status__c, &quot;Not Provisioned&quot;))
)</errorConditionFormula>
    <errorMessage>You may not change the account that this contact is associated with.</errorMessage>
</ValidationRule>